--- a/views/index.pug
+++ b/views/index.pug
@@ -3,7 +3,7 @@ include mixins/_Nav
 doctype html
 html
   head
-    title= title
+    title= 'mowglixxCMS' + endpoint + ' - ' + title
     link(href='//cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We', crossorigin='anonymous')
   body
     .container
