added bootstrap JS CDN

--- a/views/index.pug
+++ b/views/index.pug
@@ -13,3 +13,4 @@ html
         h2= title
         h2.small= 'Template: '+template
         p= body
+  script(src='//cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js', integrity='sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj', crossorigin='anonymous')
