--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,7 @@ html
   head
     title= 'mowglixxCMS' + endpoint + ' - ' + title
     link(href='//cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css', rel='stylesheet', integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We', crossorigin='anonymous')
-  body
+  body.dark
     .container
       .row
         +Nav(Links)
