--- a/views/mixins/_Nav.pug
+++ b/views/mixins/_Nav.pug
@@ -1,4 +1,16 @@
 mixin Nav(links)
-  .nav
-    each link in links
-      a(class='nav-link', href= '/'+link) #{link} 
+  nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
+    .container-fluid
+      a.navbar-brand(href='#') mowglixxCMS
+      button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+    #navbarSupportedContent.collapse.navbar-collapse
+      ul.navbar-nav
+        li.nav-item
+          a.nav-link(aria-current='page' href='/') Home
+        li.nav-item.dropdown
+          a#navbarDropdown.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false') Endpoints
+          ul.dropdown-menu(aria-labelledby='navbarDropdown')
+            each link in links
+              li.nav-item
+                a.dropdown-item(href= link) #{link}
