--- a/views/home.pug
+++ b/views/home.pug
@@ -19,7 +19,7 @@ html
             h1 #{title}
             p.lead.text-muted // Be Different
             p
-              a.btn.btn-success.m-2(href="#") NoNo
+              a.btn.btn-success.m-2(href="https://www.youtube.com/watch?v=BijqEg7q6oI") NoNo
       .row
         p= body
   script(
