--- a/views/index.pug
+++ b/views/index.pug
@@ -9,7 +9,13 @@ html
       rel='stylesheet' 
       integrity='sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We' 
       crossorigin='anonymous')
-  body.dark
+    style.
+      .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited{
+        background-color: #{page.theme};
+        border-color: #{page.theme};
+      }
+
+  body
     .container
       .row
         +Nav(Links)
@@ -19,7 +25,7 @@ html
             h1 #{endpoint.path}
             p.lead.text-muted #{'// '+page.subtitle}
             p
-              a.btn.btn-primary.m-2(href="#") #{endpoint.path}
+              a.btn.btn-primary.m-2(href="#") #{page.theme}
       .row
         p= page.body
   script(
