--- a/views/index.pug
+++ b/views/index.pug
@@ -14,6 +14,10 @@ html
         background-color: #{page.theme};
         border-color: #{page.theme};
       }
+      .jumbotron{
+        background-color: #{page.theme};
+        border-color: #{page.theme/2};
+      }
 
   body
     .container
